--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+
+  <link rel="stylesheet" href="../src/compiled-assets/main.css">
+
+  
 </head>
 
 <body>
@@ -47,6 +51,7 @@
               alt="Bildnis Anna Buchner, geborene Lindacker">
             <figcaption class="ut-bg-gradient">
               <p>Bildnis Anna Buchner, geborene Lindacker</p>
+
               <dl class="additional-info">
                 <dt>Zuschreibung:</dt>
                 <dd>
